--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "23.3.13",
-    "@types/node": "10.12.18",
-    "@types/react": "16.7.20",
-    "@types/react-dom": "16.0.11",
+    "@types/jest": "^23.3.13",
+    "@types/node": "^10.12.18",
+    "@types/react": "^16.7.20",
+    "@types/react-dom": "^16.0.11",
+    "@types/uuid": "^3.4.4",
+    "date-fns": "^1.30.1",
+    "firebase": "^5.8.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "typescript": "3.2.4"
+    "styled-components": "^4.1.3",
+    "typescript": "^3.2.4",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -22,9 +28,6 @@
     "extends": "react-app"
   },
   "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
+    "last 2 Chrome versions"
   ]
 }
