--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.20",
@@ -15,6 +17,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "styled-components": "^4.1.3",
+    "typeface-roboto": "0.0.54",
     "typescript": "^3.2.4",
     "uuid": "^3.3.2"
   },
