--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "@types/jest": "^23.3.13",
+    "@types/js-cookie": "^2.2.1",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.20",
     "@types/react-dom": "^16.0.11",
     "@types/uuid": "^3.4.4",
     "date-fns": "^1.30.1",
     "firebase": "^5.8.0",
+    "js-cookie": "^2.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-firebaseui": "^3.1.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "styled-components": "^4.1.3",
