--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@types/jest": "^23.3.13",
     "@types/js-cookie": "^2.2.1",
     "@types/node": "^10.12.18",
+    "@types/query-string": "^6.3.0",
     "@types/react": "^16.7.20",
     "@types/react-dom": "^16.0.11",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/styled-components": "^4.1.12",
     "@types/uuid": "^3.4.4",
     "date-fns": "^1.30.1",
     "firebase": "^5.8.0",
     "js-cookie": "^2.2.0",
+    "query-string": "^6.3.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-firebaseui": "^3.1.2",
