--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.1.0",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "@types/jest": "^23.3.13",
@@ -14,9 +15,10 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/styled-components": "^4.1.12",
     "@types/uuid": "^3.4.4",
-    "date-fns": "^1.30.1",
+    "date-fns": "^2.0.0-alpha.27",
     "firebase": "^5.8.0",
     "js-cookie": "^2.2.0",
+    "material-ui-pickers": "^2.2.4",
     "query-string": "^6.3.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
