--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "babba-tracker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://crispioso.github.io/babba-tracker/",
   "dependencies": {
     "@date-io/date-fns": "^1.1.0",
     "@material-ui/core": "^3.9.2",
@@ -17,6 +18,7 @@
     "@types/uuid": "^3.4.4",
     "date-fns": "^2.0.0-alpha.27",
     "firebase": "^5.8.0",
+    "gh-pages": "^2.0.1",
     "js-cookie": "^2.2.0",
     "material-ui-pickers": "^2.2.4",
     "query-string": "^6.3.0",
@@ -34,7 +36,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
