--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/babba-tracker/",
+  "start_url": "/babba-tracker",
   "display": "standalone",
   "theme_color": "#9c27b0",
   "background_color": "#fafafa"
