--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
-  "name": "babba-tracker",
+  "name": "babba-tracker-v2",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://crispioso.github.io/babba-tracker/",
   "dependencies": {
-    "@date-io/date-fns": "^1.1.0",
-    "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^3.0.2",
-    "@types/jest": "^23.3.13",
-    "@types/js-cookie": "^2.2.1",
-    "@types/node": "^10.12.18",
+    "@date-io/date-fns": "^1.3.7",
+    "@material-ui/core": "^4.1.2",
+    "@material-ui/icons": "^4.2.1",
+    "@types/jest": "^24.0.15",
+    "@types/js-cookie": "^2.2.2",
+    "@types/node": "^12.0.10",
     "@types/query-string": "^6.3.0",
-    "@types/react": "^16.7.20",
-    "@types/react-dom": "^16.0.11",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/styled-components": "^4.1.12",
+    "@types/react": "^16.8.22",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-router-dom": "^4.3.4",
+    "@types/styled-components": "^4.1.16",
     "@types/uuid": "^3.4.4",
-    "date-fns": "^2.0.0-alpha.27",
-    "firebase": "^5.8.0",
+    "date-fns": "2.0.0-alpha.27",
+    "date-fns-timezone": "^0.1.4",
+    "firebase": "^6.2.2",
     "gh-pages": "^2.0.1",
     "js-cookie": "^2.2.0",
     "material-ui-pickers": "^2.2.4",
-    "query-string": "^6.3.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "query-string": "^6.8.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-firebaseui": "^3.1.2",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
-    "styled-components": "^4.1.3",
-    "typeface-roboto": "0.0.54",
-    "typescript": "^3.2.4",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "styled-components": "^4.3.2",
+    "typeface-roboto": "^0.0.54",
+    "typescript": "^3.5.2",
     "uuid": "^3.3.2"
   },
   "scripts": {
