--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,5 +21,5 @@
   "start_url": "/babba-tracker/",
   "display": "standalone",
   "theme_color": "#9c27b0",
-  "background_color": "#fafafa"
+  "background_color": "#f5f5f5"
 }
