--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,5 @@
   "start_url": "/babba-tracker/",
   "display": "standalone",
   "theme_color": "#9c27b0",
-  "background_color": "#f5f5f5",
-  "gcm_sender_id": "103953800507"
+  "background_color": "#f5f5f5"
 }
